# softloq-whatwg-infra

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  dir_275dad98f7b600191e303f26960901bd.html  dir_275dad98f7b600191e303f26960901bd.js  dir_2fbcc8d730cc7a6d95f84baee5c7d661.html  dir_2fbcc8d730cc7a6d95f84baee5c7d661.js  dir_5d2930063076abeb561f95cc4cddb4ca.html  dir_5d2930063076abeb561f95cc4cddb4ca.js  dir_df2685bb2ab161ab8fb7cb105adc30d9.html  dir_df2685bb2ab161ab8fb7cb105adc30d9.js  files.html  files_dup.js  globals.html  globals_defs.html  hierarchy.html  hierarchy.js  index.html  navtreedata.js  navtreeindex0.js
.github/workflows/: docs.yml
d0/dca/: classSoftloq_1_1WHATWG_1_1Null.html
d1/d32/: classSoftloq_1_1WHATWG_1_1Primitive-members.html
d1/d35/: abstract_8hpp_source.html
d1/d61/: classSoftloq_1_1WHATWG_1_1Null-members.html
d2/d5b/: null_8hpp_source.html
d3/d1a/: whatwg__infra_8hpp_source.html
d3/d6f/: tuple_8hpp_source.html
d4/d46/: libmacro_8hpp.html  libmacro_8hpp.js  libmacro_8hpp_source.html
d4/da0/: string_8hpp_source.html
d4/dad/: struct_8hpp_source.html
d5/dd4/: classSoftloq_1_1WHATWG_1_1Primitive.html
d7/ded/: queue_8hpp_source.html
d8/d86/: bool_8hpp_source.html
d8/dcc/: classSoftloq_1_1WHATWG_1_1Bool.html
d9/d58/: adt_8hpp_source.html
d9/da1/: primitive_8hpp_source.html
da/da9/: byte_8hpp_source.html
db/d19/: namespace_8hpp_source.html
db/d2a/: byte__sequence_8hpp_source.html
db/d60/: classSoftloq_1_1WHATWG_1_1Bool-members.html
db/daa/: number_8hpp_source.html
dc/d1d/: list_8hpp_source.html
de/d99/: time_8hpp_source.html
de/df9/: codepoint_8hpp_source.html
df/d47/: stack_8hpp_source.html
df/d7c/: map_8hpp_source.html
include/Softloq-WHATWG/: libmacro.hpp  whatwg_infra.hpp
search/: all_0.js  all_1.js  all_2.js  all_4.js  classes_0.js  classes_2.js  defines_0.js  searchdata.js
src/primitive/: base.cpp  bool.cpp  byte.cpp  byte_sequence.cpp  code_point.cpp  code_unit.cpp  int.cpp  null.cpp  number_base.cpp  number_signed.cpp  number_unsigned.cpp  string.cpp  uint.cpp
src/structure/: base.cpp
tests/: example.cpp
(+64 files in other folders)
